--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </header>
     <main>
+        <!-- about section -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -55,6 +56,33 @@
                     <p class="info-description">Los Angeles, USA</p>
                 </div>
             </div>
+        </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum itaque molestias nihil dolor incidunt modi.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Officiis id laboriosam quidem voluptates, in laborum sapiente animi sunt voluptas facere sint, laudantium dolorum?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Sed alias, explicabo architecto nihil odit libero? Culpa sapiente, temporibus modi consectetur voluptatem voluptate eaque!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Libero sint illum perspiciatis veritatis! Asperiores eius eveniet in distinctio aliquam illum tempora exercitationem modi.</p>
+                </div>
+            </div>            
         </section>
     </main>
     <footer>
