--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b22075a9ff.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <header class="header">
@@ -28,7 +29,8 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
+                <buttton class="contact-btn"><i class="fa-solid fa-phone"></i> Contact</buttton>
             </div>
             <img src="images/hardy.png" alt="developer's-image">
         </div>
@@ -130,12 +132,38 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
     <footer>
-
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Let's Connect</h3>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div class="message">
+                <h3 class="section-title">Let's Message Me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    
+                    <input type="email" name="" id="email" placeholder="Your email">
+                    
+                    <textarea name="" id="" cols="30" rows="8" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
