--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                 <h3 class="banner-sub-title">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
-                <buttton class="contact-btn"><i class="fa-solid fa-phone"></i> Contact</buttton>
+                <div class="btn">
+                    <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
+                    <buttton class="contact-btn"><i class="fa-solid fa-phone"></i> Contact</buttton>
+                </div>
             </div>
             <img src="images/hardy.png" alt="developer's-image">
         </div>
@@ -139,7 +141,7 @@
     <footer>
         <!-- contact section -->
         <section class="contact">
-            <div>
+            <div class="connect">
                 <h3 class="section-title">Let's Connect</h3>
                 <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <a href="">
